[package]
name = "cadence-with-flush"
version = "0.29.1"
description = "A fork of candence with client flush support"
repository = "https://github.com/zh-jq/cadence"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["statsd", "metrics"]
edition = "2018"
autobenches = false

[dependencies]
crossbeam-channel = "0.5.1"

